overhaul search system

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ language:
     homepage-top-section-extensions: "Peakboard Extensions"
     homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
     homepage-top-section-extensions-button: "see all"
+    homepage-top-section-search: "Search results"
     homepage-carousel-button-text: "learn more"
     homepage-featured-templates: "recommended"
     homepage-all-templates: "all"
@@ -122,6 +123,7 @@ language:
     homepage-top-section-extensions: "Peakboard Extensions"
     homepage-top-section-extensions-text: "Peakboard bietet eine Vielzahl von Schnittstellen für die verschiedensten Datenquellen. Sollte deine Datenquelle noch nicht dabei sein, helfen dir unsere Erweiterungen weiter."
     homepage-top-section-extensions-button: "alle extensions"
+    homepage-top-section-search: "Search results"
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-templates: "empfohlen"
     homepage-all-templates: "alle"
@@ -197,6 +199,7 @@ language:
     homepage-top-section-extensions: "拓件"
     homepage-top-section-extensions-text: "Peakboard提供各种各样的数据源接口。如果您需要的数据源暂未列出，可以试试拓件。"
     homepage-top-section-extensions-button: "查看所有"
+    homepage-top-section-search: "Search results"
     homepage-carousel-button-text: "了解更多"
     homepage-featured-templates: "推荐"
     homepage-all-templates: "所有"
