--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Due to the flexibility of Peakboard there are numerous application
 url: "https://templates.peakboard.com"
 twitter_username: pkbrd
 github_username:  Peakboard
-languages: ["en", "de", "cn"]
+languages: ["en", "de"]
 exclude_from_localizations: ["assets", "CNAME"]
 defaultLang: de
 languageNames:
