Introduce new marketing cookie

--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,8 @@ language:
     cookie-box-change-preferences-section-essential-explanation: "Essential cookies enable basic functions and are necessary for the proper functioning of the website."
     cookie-box-change-preferences-section-statistics: "Statistics (1)"
     cookie-box-change-preferences-section-statistics-explanation: "Statistics Cookies collect information anonymously. This information helps us to understand how our visitors use our website."
+    cookie-box-change-preferences-section-marketing: "Marketing (1)"
+    cookie-box-change-preferences-section-marketing-explanation: "Marketing cookies store information regarding visited websites of users. This data is used to display personalized advertisements tailored to user interests."
     cookie-box-change-preferences-button-save: "Save Preferences"
     extensions-link-text-return-to-overview: "Gallery / Extensions"
     extensions-link-text-download: "download extension"
@@ -175,6 +177,8 @@ language:
     cookie-box-change-preferences-section-essential-explanation: "Essenzielle Cookies ermöglichen grundlegende Funktionen und sind für die einwandfreie Funktion der Website erforderlich."
     cookie-box-change-preferences-section-statistics: "Statistiken (1)"
     cookie-box-change-preferences-section-statistics-explanation: "Statistik Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen."
+    cookie-box-change-preferences-section-marketing: "Marketing (1)"
+    cookie-box-change-preferences-section-marketing-explanation: "Marketing Cookies speichern Informationen hinsichtlich besuchter Websites von Nutzern. Diese Daten werden dazu genutzt, um personalisierte, auf die Nutzerinteressen abgestimmte Werbeanzeigen einzublenden."
     cookie-box-change-preferences-button-save: "Speichern"
     extensions-link-text-return-to-overview: "Gallery / Extensions"
     extensions-link-text-download: "extension herunterladen"
