fix github link in footer for extensions

--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,8 @@ language:
     footer-copyright: "All rights are reserved."
     footer-github: "github"
     footer-github-text: "View this page in Github"
-    footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
+    footer-templates-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
+    footer-extensions-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_extensions/"
     footer-legal: "Legal Information"
     footer-legal-url: "https://peakboard.com/en/legal-notice/"
     footer-privacy: "Privacy Policy"
@@ -147,7 +148,8 @@ language:
     footer-copyright: "alle rechte vorbehalten."
     footer-github: "github"
     footer-github-text: "seite in github öffnen"
-    footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
+    footer-templates-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
+    footer-extensions-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_extensions/"
     footer-legal: "impressum"
     footer-legal-url: "https://peakboard.com/legal-notice/"
     footer-privacy: "Privacy Policy"
