--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ language:
     homepage-all-extensions: "all"
     homepage-menu-title-templates: "Peakboard Templates"
     homepage-menu-title-extensions: "Peakboard Extensions"
-    homepage-visible-templates: ["all","recommended","administration","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor", "design kit"]
+    homepage-visible-templates: ["all","recommended","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor"]
     homepage-visible-extensions: ["all","database","iot"]
     top-menu-cta-button-text: "get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
@@ -134,7 +134,7 @@ language:
     homepage-all-extensions: "alle"
     homepage-menu-title-templates: "Peakboard Templates"
     homepage-menu-title-extensions: "Peakboard Extensions"
-    homepage-visible-templates: ["alle","empfohlen","administration","andon","kpi","lean management","logistik","oee / gae","produktion","scripting","interaktion", "edge", "shopfloor", "design kit"]
+    homepage-visible-templates: ["alle","empfohlen","andon","kpi","lean management","logistik","oee / gae","produktion","scripting","interaktion", "edge", "shopfloor"]
     homepage-visible-extensions: ["alle","datenbank","iot"]
     top-menu-cta-button-text: "kostenlos starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
