--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ languageNames:
   en: English
 # Analytics
 gtm: "GTM-T2LNC7N"
-mtm: "Dyp84mDR"
+mtm: "s0HT4V3X"
 
 # Build settings
 markdown: kramdown
