--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ language:
     homepage-all-extensions: "all"
     homepage-menu-title-templates: "Peakboard Templates"
     homepage-menu-title-extensions: "Peakboard Extensions"
-    homepage-visible-templates: ["all","recommended","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor"]
+    homepage-visible-templates: ["all","recommended","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor", "power workshop"]
     homepage-visible-extensions: ["all","database","iot","cloud services"]
     top-menu-cta-button-text: "get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
