--- a/_config.yml
+++ b/_config.yml
@@ -44,10 +44,10 @@ language:
     homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Our Templates and Extensions will help you make their implementation with the Peakboard Designer as easy as possible."
     homepage-top-section-templates: "Peakboard Templates"
     homepage-top-section-templates-text: "Are you missing the inspiration you need? Our templates will help you get started with your Peakboard project. Simply download them for free and customize them according to your ideas."
-    homepage-top-section-templates-button: "see all"
+    homepage-top-section-templates-button: "See all"
     homepage-top-section-extensions: "Peakboard Extensions"
     homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
-    homepage-top-section-extensions-button: "see all"
+    homepage-top-section-extensions-button: "See all"
     homepage-top-section-search: "Search results"
     homepage-carousel-button-text: "learn more"
     homepage-featured-templates: "recommended"
@@ -55,9 +55,9 @@ language:
     homepage-all-extensions: "all"
     homepage-menu-title-templates: "Peakboard Templates"
     homepage-menu-title-extensions: "Peakboard Extensions"
-    homepage-visible-templates: ["all","recommended","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "shopfloor", "mqtt", "opc ua", "sql", "partner"]
-    homepage-visible-extensions: ["all","database","iot","cloud services"]
-    top-menu-cta-button-text: "get started for free!"
+    homepage-visible-templates: ["All","Recommended","Andon","Kpi","Lean management","Logistics","Oee","Production","Scripting","Interaction", "Shopfloor", "Mqtt", "Opc Ua", "Sql", "Partner"]
+    homepage-visible-extensions: ["All","Database","Iot","Cloud services"]
+    top-menu-cta-button-text: "Get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "< Gallery / Templates"
     footer-support: "support"
@@ -104,7 +104,7 @@ language:
     cookie-box-change-preferences-section-marketing-explanation: "Marketing cookies store information regarding visited websites of users. This data is used to display personalized advertisements tailored to user interests."
     cookie-box-change-preferences-button-save: "Save Preferences"
     extensions-link-text-return-to-overview: "Gallery / Extensions"
-    extensions-link-text-download: "download extension"
+    extensions-link-text-download: "Download extension"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "How to install a Peakboard Extension"
     extensions-link-text-source-code: "View source code on GitHub"
@@ -112,7 +112,7 @@ language:
     extensions-section-version-history: "Version History"
     extensions-section-screenshots: "Screenshots"
   de:
-    article-download-button-text: "template herunterladen"
+    article-download-button-text: "Template herunterladen"
     article-download-explanation: "Datei mit Peakboard Designer öffnen"
     article-overview-title: "overview"
     article-overview-description-title: "Description"
@@ -123,10 +123,10 @@ language:
     homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Um dir ihre Umsetzung mit dem Peakboard Designer so einfach wie möglich zu machen, helfen dir unsere Templates und Erweiterungen."
     homepage-top-section-templates: "Peakboard Templates"
     homepage-top-section-templates-text: "Dir fehlt die nötige Inspiration? Unsere Templates erleichtern dir den Einstieg in dein Peakboard Projekt. Einfach kostenlos herunterladen und ganz nach deinen Vorstellungen individualisieren."
-    homepage-top-section-templates-button: "alle templates"
+    homepage-top-section-templates-button: "Alle Templates"
     homepage-top-section-extensions: "Peakboard Extensions"
     homepage-top-section-extensions-text: "Peakboard bietet eine Vielzahl von Schnittstellen für die verschiedensten Datenquellen. Sollte deine Datenquelle noch nicht dabei sein, helfen dir unsere Erweiterungen weiter."
-    homepage-top-section-extensions-button: "alle extensions"
+    homepage-top-section-extensions-button: "Alle Extensions"
     homepage-top-section-search: "Search results"
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-templates: "empfohlen"
@@ -134,9 +134,9 @@ language:
     homepage-all-extensions: "alle"
     homepage-menu-title-templates: "Peakboard Templates"
     homepage-menu-title-extensions: "Peakboard Extensions"
-    homepage-visible-templates: ["alle","empfohlen","andon","kpi","lean management","logistik","oee / gae","produktion","scripting","interaktion", "shopfloor", "mqtt", "opc ua", "sql", "partner"]
-    homepage-visible-extensions: ["alle","datenbank","iot","cloud services"]
-    top-menu-cta-button-text: "kostenlos starten!"
+    homepage-visible-templates: ["Alle","Empfohlen","Andon","Kpi","Lean management","Logistik","Oee / gae","Produktion","Scripting","Interaktion", "Shopfloor", "Mqtt", "Opc Ua", "Sql", "Partner"]
+    homepage-visible-extensions: ["Alle","Datenbank","Iot","Cloud services"]
+    top-menu-cta-button-text: "Kostenlos starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "< Gallery / Templates"
     footer-support: "support"
@@ -183,7 +183,7 @@ language:
     cookie-box-change-preferences-section-marketing-explanation: "Marketing Cookies speichern Informationen hinsichtlich besuchter Websites von Nutzern. Diese Daten werden dazu genutzt, um personalisierte, auf die Nutzerinteressen abgestimmte Werbeanzeigen einzublenden."
     cookie-box-change-preferences-button-save: "Speichern"
     extensions-link-text-return-to-overview: "Gallery / Extensions"
-    extensions-link-text-download: "extension herunterladen"
+    extensions-link-text-download: "Extension herunterladen"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/de-ManageExtension.html"
     extensions-link-text-how-to: "So installierst du eine Peakboard Extension"
     extensions-link-text-source-code: "Zum Quellcode auf GitHub"
